--- a/webs.tex
+++ b/webs.tex
@@ -128,7 +128,7 @@ Our whole discussion above has a natural $q$-deformation. In other words, $\Rep(
 
 In the previous section we assumed $q=1$ in order to simplify the notation. However, in the rest of the paper we will always consider this quantum deformation. In section \ref{sec:quantumskew} we will discuss in detail the quantum skew Howe duality results we need, which may be of independent interest.
 
-The $q$-deformation of the linear maps (\ref{eq:2}) can be rephrased as giving us a functor $ \Psi_m^n : \dU(\gl_m) \rightarrow \Sp(\SL_n) $ where $ \dU(\gl_m) $ is the category version of $ \dalg(\gl_m) $.  The categories $\Sp(\SL_n)$ and $\dU(\gl_m)$ can both be categorified. First, $\dU(\gl_m)$ can be lifted to the 2-category $\dot{\mathbb{U}}_q(\gl_m)$, defined by Khovanov-Lauda \cite{0807.3250} and Rouquier \cite{R}.  On the other hand, the spider category $\Sp(\SL_n)$ can be lifted to a 2-category $\Foam_n$ where the 2-morphisms consist of ``foams'' between webs, introduced by Khovanov \cite{0304375} (for n = 3) and Mackaay, Stosic, and Vaz \cite{0708.2228}. 
+The $q$-deformation of the linear maps (\ref{eq:2}) can be rephrased as giving us a functor $ \Psi_m^n : \dU(\gl_m) \rightarrow \Sp(\SL_n) $ where $ \dU(\gl_m) $ is the category version of $ \dalg(\gl_m) $.  The categories $\Sp(\SL_n)$ and $\dU(\gl_m)$ can both be categorified. First, $\dU(\gl_m)$ can be lifted to the 2-category $\dot{\mathbb{U}}_q(\gl_m)$, defined by Khovanov-Lauda \cite{MR2628852} and Rouquier \cite{0812.5023}.  On the other hand, the spider category $\Sp(\SL_n)$ can be lifted to a 2-category $\Foam_n$ where the 2-morphisms consist of ``foams'' between webs, introduced by Khovanov \cite{MR2100691} (for n = 3) and partially described for general $n$ by Mackaay, Stosic, and Vaz \cite{0708.2228}. 
 
 Thus, it is natural to ask if the functor $ \Psi_m^n $ lifts to a 2-functor
 $$\widetilde{\Psi}_m^n: \dot{\mathbb{U}}_q(\gl_m) \rightarrow \Foam_n.$$
