--- a/preamble.tex
+++ b/preamble.tex
@@ -5,6 +5,8 @@
 \usepackage{amsmath,amssymb,amsfonts,amsthm}
 \usepackage{ifpdf}
 
+\usepackage{comment}
+
 \usepackage[all]{xy}
 \SelectTips{cm}{}
 % This may speed up compilation of complex documents with many xymatrices.
