--- a/webs.tex
+++ b/webs.tex
@@ -144,7 +144,7 @@ The category $\Rep(\SL_n)$ is in fact a braided monoidal category where the brai
 
 More precisely, we define a braided monoidal category structure on $ \dU^n(\gl_\bullet) = \oplus_m \dU^n(\gl_m) $ using Lusztig's quantum Weyl groups elements.  We then prove (Theorem \ref{th:braiding}) that the functor $ \Phi^n : \dU^n(\gl_\bullet) \rightarrow \Rep(\SL_n) $ carries the braiding in $ \dU^n(\gl_\bullet) $ to the braiding in $ \Rep(\SL_n) $.  In particular, this shows that under quantum skew Howe duality, Lusztig's quantum group element $ T \in \dU(\gl_2) $ is taken to the $R$-matrix braidings $ \beta : \Alt{k}{q} \bC^n_q \otimes \Alt{l}{q} \bC^n_q \rightarrow \Alt{l}{q} \bC^n_q \otimes \Alt{k}{q} \bC^n_q$.  This last fact was previously proven by the first and second authors and Licata in \cite{MR2593278}, following the approach from \cite{MR1896470} who established the analogous result for symmetric Howe duality.  The proofs from \cite{MR1896470} and \cite{MR2593278} involve a somewhat lengthy computation, whereas the categorical approach in this paper provides a far more conceptual proof.
 
-The braided monoidal category structure on $\Rep(\SL_n) $ leads to quantum knot invariants.  The results of this paper show that these knot invariants can be computed using webs. Of course, this was known by the work of Murakami, Ohtsuki and Yamada in \cite{MR1659228}. Our work extends theirs in the sense that while they gave a partition function evaluating closed webs, we have shown that the category of open webs, with the relations described here, is itself equivalent to the representation category. We would like to have an evaluation algorithm, showing directly that any closed web can be evaluated to a scalar by repeated application of the relations here; one has been proposed by Jeong and Kim in \cite{math/0506403}. We hope to address this in future work.
+The braided monoidal category structure on $\Rep(\SL_n) $ leads to quantum knot invariants.  The results of this paper show that these knot invariants can be computed using webs. Of course, this was known by the work of Murakami, Ohtsuki and Yamada in \cite{MR1659228}. Our work extends theirs in the sense that while they gave a partition function evaluating closed webs, we have shown that the category of open webs, with the relations described here, is itself equivalent to the representation category. We would like to have an evaluation algorithm, showing directly that any closed web can be evaluated to a scalar by repeated application of the relations here; one has been proposed by Jeong and Kim in \cite{math/0506403}. Grant in \cite{1212.4511} also gives a somewhat indirect evaluation algorithm using a subset of our relations. While the tensor category defined by those relations is thus evaluable, it seems possible that it is degenerate (\emph{i.e.} there are negligible morphisms, which when paired with any other morphism to give a closed diagram, give zero) and hence not equivalent to the representation category. 
 
 \vspace{.5cm}
 
