--- a/webs.tex
+++ b/webs.tex
@@ -1677,7 +1677,7 @@ $$ w(i) = \begin{cases} p + i \ \ & \text{ if } i \le m  \\
  $$
 
 \begin{lem} \label{le:natural}
-$\beta $ is a natural transformation from the bifunctor $- \bigotimes -$ to the bifunctor $- \bigotimes^{\text{op}} -$.
+The map $\beta $ is a natural transformation from the bifunctor $- \bigotimes -$ to the bifunctor $- \bigotimes^{\text{op}} -$.
 \end{lem}
 
 \begin{proof}
