some edits following the referee's report

--- a/Reportanswer-CKM.tex
+++ b/Reportanswer-CKM.tex
@@ -1,79 +1,157 @@
-\documentclass{amsart}
-\usepackage[dvips]{graphics,color}
-\usepackage{amsthm}
-
-\setlength{\topmargin}{0cm}
-\setlength{\textwidth}{6.5in}
-\setlength{\oddsidemargin}{0cm}
-\setlength{\evensidemargin}{0cm}
-\setlength{\textheight}{8.5in}
-\setlength{\headsep}{0.5cm}
-
-\newtheorem{thm}{Theorem}[section]
-\newtheorem{lem}[thm]{Lemma}
-\newtheorem{claim}[thm]{Claim}
-\newtheorem{fact}[thm]{Fact}
-\newtheorem{cor}[thm]{Corollary}
-\newtheorem{prop}[thm]{Proposition}
-\newtheorem{conj}[thm]{Conjecture}
-\newtheorem{ex}[thm]{Example}
-
-\def\C{{\mathbb C}}
-\def\P{{\mathbb P}}
-\def\R{{\mathbb R}}
-\def\Z{{\mathbb Z}}
-\def\O{{\mathcal O}}
-\def\Fact{{\bf Fact:}}
-\def\Claim{{\bf Claim:}}
-\def\Example{{\bf Example:}}
-\def\Note{{\bf Note: }}
-
-\title{Responses to Referees Reports: Webs and quantum skew Howe duality}
-
-\begin{document}
-
-\maketitle 
-
-Thank you very much to the referees for their careful reading of this paper.
-
-Here are the responses to the remarks in the referee report. 
-
-\begin{enumerate}
-\item Changed the introduction so that one discusses the $q$-deformed version of the story more uniformly. Also added a remark regarding the fact that $q$ can be specialized to any nonzero complex number. 
-\item Fixed typo.
-\item Clarified what happens to the equations under mirror reflection etc. Also, fixed the calculation in Lemma 2.2.1. Indeed $(k,l,r,s)$ should be $(2,k,k,1)$. The weird signs are a consequence of a very early version of the paper when certain relations had signs. The current calculation is fairly straight forward. 
-\item Fixed typo to say ``labelled'' everywhere. 
-\item Fixed typo.
-\item Fixed typo.
-\item Fixed typo.
-\item Fixed typo.
-\item Fixed typo.
-\item Yes, there were minus signs missing which are now fixed. 
-\item Fixed argument. 
-\item Fixed typos. 
-\item Added proof of this identity.
-\item NEED
-\item NEED
-\item NEED
-\item NEED
-\item NEED
-\item Fixed typo.
-\item Added the referee's suggested explanation in order to help reader. 
-\item Fixed typo.
-\item Fixed typo.
-\item Added a reference to the suggested paper regarding this result. NEED could some add this reference (i'm not sure how to use bibtex). I cited it as cite{Do} and the paper is 0305208 on the arXiv. 
-\item Fixed typo.
-\item NEED
-\item Fixed typo.
-\item NEED
-\item Fixed typo.
-\item Added reference. 
-\item Added subscripts.
-\item Erased ``that''. 
-\item NEED
-\item NEED
-\item Fixed.
-\item NEED
-\end{enumerate}
-
-\end{document}
+\documentclass{amsart}
+
+\usepackage[dvips]{graphics,color}
+
+\usepackage{amsthm}
+
+
+
+\setlength{\topmargin}{0cm}
+
+\setlength{\textwidth}{6.5in}
+
+\setlength{\oddsidemargin}{0cm}
+
+\setlength{\evensidemargin}{0cm}
+
+\setlength{\textheight}{8.5in}
+
+\setlength{\headsep}{0.5cm}
+
+
+
+\newtheorem{thm}{Theorem}[section]
+
+\newtheorem{lem}[thm]{Lemma}
+
+\newtheorem{claim}[thm]{Claim}
+
+\newtheorem{fact}[thm]{Fact}
+
+\newtheorem{cor}[thm]{Corollary}
+
+\newtheorem{prop}[thm]{Proposition}
+
+\newtheorem{conj}[thm]{Conjecture}
+
+\newtheorem{ex}[thm]{Example}
+
+
+
+\def\C{{\mathbb C}}
+
+\def\P{{\mathbb P}}
+
+\def\R{{\mathbb R}}
+
+\def\Z{{\mathbb Z}}
+
+\def\O{{\mathcal O}}
+
+\def\Fact{{\bf Fact:}}
+
+\def\Claim{{\bf Claim:}}
+
+\def\Example{{\bf Example:}}
+
+\def\Note{{\bf Note: }}
+
+
+
+\title{Responses to Referee's Report: Webs and quantum skew Howe duality}
+
+
+
+\begin{document}
+
+
+
+\maketitle 
+
+
+
+Thank you very much to the referees for their careful reading of this paper.
+
+
+
+Here are the responses to the remarks in the referee report. 
+
+
+
+\begin{enumerate}
+
+\item Changed the introduction so that one discusses the $q$-deformed version of the story more uniformly. Also added a remark regarding the fact that $q$ can be specialized to any nonzero complex number. 
+
+\item Fixed typo.
+
+\item Clarified what happens to the equations under mirror reflection etc. Also, fixed the calculation in Lemma 2.2.1. Indeed $(k,l,r,s)$ should be $(2,k,k,1)$. The weird signs are a consequence of a very early version of the paper when certain relations had signs. The current calculation is fairly straight forward. 
+
+\item Fixed typo to say ``labelled'' everywhere. 
+
+\item Fixed typo.
+
+\item Fixed typo.
+
+\item Fixed typo.
+
+\item Fixed typo.
+
+\item Fixed typo.
+
+\item Yes, there were minus signs missing which are now fixed. 
+
+\item Fixed argument. 
+
+\item Fixed typos. 
+
+\item Added proof of this identity.
+
+\item NEED
+
+\item Fixed typo.
+
+\item Fixed typo.
+
+\item NEED. (I added a missing $x_S$ on the last displayed line.)
+
+\item Fixed typo.
+
+\item Fixed typo.
+
+\item Added the referee's suggested explanation in order to help reader. 
+
+\item Fixed typo.
+
+\item Fixed typo.
+
+\item Added a reference to the suggested paper regarding this result.
+\item Fixed typo.
+
+\item Improved the exposition, by proving (5.3) first and then using that to explain why the special case suffices.
+
+\item Fixed typo.
+
+\item Added the second hexagon equations. NEED: Besides changing some singulars to plurals, which I've done, I think no other changes are needed; can someone double check?
+
+\item Fixed typo.
+
+\item Added reference. 
+
+\item Added subscripts.
+
+\item Erased ``that''. 
+
+\item Fixed: ``thus be the hexagon equation\emph{s}''
+
+\item NEED
+
+\item Fixed.
+
+\item NEED
+
+\end{enumerate}
+
+
+
+\end{document}
+
