--- a/Reportanswer-CKM.tex
+++ b/Reportanswer-CKM.tex
@@ -66,7 +66,7 @@
 
 
 
-\maketitle 
+\maketitle
 
 
 
@@ -74,23 +74,19 @@ Thank you very much to the referees for their careful reading of this paper.
 
 
 
-Here are the responses to the remarks in the referee report. 
+Here are the responses to the remarks in the referee report.
 
 
 
 \begin{enumerate}
 
-\item Changed the introduction so that one discusses the $q$-deformed version of the story more uniformly. Also added a remark regarding the fact that $q$ can be specialized to any nonzero complex number. 
-
+\item We left $ q = 1 $ in section 1.1 and removed the quantum integers from section 1.2.   Also we clarified that $ q $ is taken to be a formal variable throughout the paper.  We do not believe that the results hold when $ q $ is a root of unity. 
+    
 \item Fixed typo.
 
-\item Clarified what happens to the equations under mirror reflection etc. Also, fixed the calculation in Lemma 2.2.1. Indeed $(k,l,r,s)$ should be $(2,k,k,1)$. The weird signs are a consequence of a very early version of the paper when certain relations had signs. The current calculation is fairly straight forward. 
+\item Clarified what happens to the equations under mirror reflection etc. Also, fixed the calculation in Lemma 2.2.1. Indeed $(k,l,r,s)$ should be $(2,k,k,1)$. The weird signs are a consequence of a very early version of the paper when certain relations had signs. The current calculation is fairly straight forward.
 
-\item Fixed typo to say ``labelled'' everywhere. 
-
-\item Fixed typo.
-
-\item Fixed typo.
+\item Fixed typo to say ``labelled'' everywhere.
 
 \item Fixed typo.
 
@@ -98,15 +94,19 @@ Here are the responses to the remarks in the referee report.
 
 \item Fixed typo.
 
-\item Yes, there were minus signs missing which are now fixed. 
+\item Fixed typo.
 
-\item Fixed argument. 
+\item Fixed typo.
 
-\item Fixed typos. 
+\item Yes, there were minus signs missing which are now fixed.
+
+\item Fixed argument.
+
+\item Fixed typos.
 
 \item Added proof of this identity.
 
-\item NEED
+\item Explanation added.
 
 \item Fixed typo.
 
@@ -118,7 +118,7 @@ Here are the responses to the remarks in the referee report.
 
 \item Fixed typo.
 
-\item Added the referee's suggested explanation in order to help reader. 
+\item Added the referee's suggested explanation in order to help reader.
 
 \item Fixed typo.
 
@@ -131,15 +131,15 @@ Here are the responses to the remarks in the referee report.
 
 \item Fixed typo.
 
-\item Added the second hexagon equations. NEED: Besides changing some singulars to plurals, which I've done, I think no other changes are needed; can someone double check?
+\item Added the second hexagon equation.
 
 \item Fixed typo.
 
-\item Added reference. 
+\item Added reference.
 
 \item Added subscripts.
 
-\item Erased ``that''. 
+\item Erased ``that''.
 
 \item Fixed: ``thus be the hexagon equation\emph{s}''
 
