adding sentence about braiding eigenvalues, and another about Sikora

--- a/webs.tex
+++ b/webs.tex
@@ -125,7 +125,7 @@ Our whole discussion above has a natural $q$-deformation. In other words, $\Rep(
 
 In the previous section we assumed $q=1$ in order to simplify the notation. However, in the rest of the paper we will always consider this quantum deformation, with $ q $ taken as a formal variable. In section \ref{sec:quantumskew} we will discuss in detail the quantum skew Howe duality results we need, which may be of independent interest.
 
-The $q$-deformation of the linear maps (\ref{eq:2}) can be rephrased as giving us a functor $ \Psi_m^n : \dU(\gl_m) \rightarrow \Sp(\SL_n) $ where $ \dU(\gl_m) $ is the categorical version of $ \dalg(\gl_m) $ (replacing weight space idempotents with distinct objects).  The categories $\dU(\gl_m)$ and $\Sp(\SL_n)$ can both be categorified. First, $\dU(\gl_m)$ can be lifted to the 2-category $\dot{\mathbb{U}}_q(\gl_m)$, defined by Khovanov-Lauda \cite{MR2628852} and Rouquier \cite{0812.5023}.  On the other hand, the spider category $\Sp(\SL_n)$ can be lifted to a 2-category $\Foam_n$ where the 2-morphisms consist of ``foams'' between webs, introduced by Khovanov \cite{MR2100691} (for n = 3) and partially described for general $n$ by Mackaay, Stosic, and Vaz \cite{0708.2228}.
+The $q$-deformation of the linear maps (\ref{eq:2}) can be rephrased as giving us a functor $ \Psi_m^n : \dU(\gl_m) \rightarrow \Sp(\SL_n) $ where $ \dU(\gl_m) $ is the categorical version of $ \dalg(\gl_m) $ (replacing weight space idempotents with distinct objects).  The categories $\dU(\gl_m)$ and $\Sp(\SL_n)$ can both be categorified. First, $\dU(\gl_m)$ can be lifted to the 2-category $\dot{\mathbb{U}}_q(\gl_m)$, defined by Khovanov-Lauda \cite{MR2628852} and Rouquier \cite{0812.5023}.  On the other hand, the spider category $\Sp(\SL_n)$ can be lifted to a 2-category $\Foam_n$ where the 2-morphisms consist of ``foams'' between webs, introduced by Khovanov \cite{MR2100691} (for n = 3) and partially described for general $n$ by Mackaay, Stosic, and Vaz \cite{MR2491657}.
 
 Thus, it is natural to ask if the functor $ \Psi_m^n $ lifts to a 2-functor
 $$\widetilde{\Psi}_m^n: \dot{\mathbb{U}}_q(\gl_m) \rightarrow \Foam_n.$$
@@ -147,7 +147,7 @@ The category $\Rep(\SL_n)$ is in fact a braided monoidal category where the brai
 
 More precisely, we define a braided monoidal category structure on $ \dU^n(\gl_\bullet) = \oplus_m \dU^n(\gl_m) $ using Lusztig's quantum Weyl groups elements.  We then prove (Theorem \ref{th:braiding}) that the functor $ \Phi^n : \dU^n(\gl_\bullet) \rightarrow \Rep(\SL_n) $ carries the braiding in $ \dU^n(\gl_\bullet) $ to the braiding in $ \Rep(\SL_n) $.  In particular, this shows that under quantum skew Howe duality, Lusztig's quantum group element $ T \in \dU(\gl_2) $ is taken to the $R$-matrix braidings $ \beta : \Alt{k}{q} \bC^n_q \otimes \Alt{l}{q} \bC^n_q \rightarrow \Alt{l}{q} \bC^n_q \otimes \Alt{k}{q} \bC^n_q$.  This last fact was previously proven by the first and second authors and Licata in \cite{MR2593278}, following the approach from \cite{MR1896470} who established the analogous result for symmetric Howe duality.  The proofs from \cite{MR1896470} and \cite{MR2593278} involve a somewhat lengthy computation, whereas the categorical approach in this paper provides a far more conceptual proof.
 
-The braided monoidal category structure on $\Rep(\SL_n) $ leads to quantum knot invariants.  The results of this paper show that these knot invariants can be computed using webs. Of course, this was known by the work of Murakami, Ohtsuki and Yamada in \cite{MR1659228}. Our work extends theirs in the sense that while they gave a partition function evaluating closed webs, we have shown that the category of open webs, with the relations described here, is itself equivalent to the representation category. We would like to have an evaluation algorithm, showing directly that any closed web can be evaluated to a scalar by repeated application of the relations here; one has been proposed by Jeong and Kim in \cite{math/0506403}. Grant in \cite{1212.4511} also gives a somewhat indirect evaluation algorithm using a subset of our relations. While the tensor category defined by those relations is thus evaluable, it seems possible that it is degenerate (\emph{i.e.} there are negligible morphisms, which when paired with any other morphism to give a closed diagram, give zero) and hence not equivalent to the representation category.
+The braided monoidal category structure on $\Rep(\SL_n) $ leads to quantum knot invariants.  The results of this paper show that these knot invariants can be computed using webs. Of course, this was known by the work of Murakami, Ohtsuki and Yamada in \cite{MR1659228}. Our work extends theirs in the sense that while they gave a partition function evaluating closed webs, we have shown that the category of open webs, with the relations described here, is itself equivalent to the representation category. We would like to have an evaluation algorithm, showing directly that any closed web can be evaluated to a scalar by repeated application of the relations here; one has been proposed by Jeong and Kim in \cite{math/0506403}. Grant in \cite{1212.4511} also gives a somewhat indirect evaluation algorithm using a subset of our relations. While the tensor category defined by those relations is thus evaluable, it seems possible that it is degenerate (\emph{i.e.} there are negligible morphisms, which when paired with any other morphism to give a closed diagram, give zero) and hence not equivalent to the representation category. Sikora's work in \cite{MR2171796} gives an alternative presentation of the representation category using only the determinant map $\tensor^n \bC^n_q \to \Alt{n}{q} \bC^n_q$ and its dual as generators. Again, it is not clear whether the diagram category with the given relations is degenerate or not.
 
 \vspace{.5cm}
 
@@ -1769,7 +1769,7 @@ $\Phi^n(\beta_{1,1}) = \beta_{\mathbb C_q^n, \mathbb C_q^n}$
 
 
 \begin{proof}
-This follows by a direct computation.  First, it is a standard fact that $  \beta_{\mathbb C_q^n, \mathbb C_q^n} $ acts by $ q^{1-1/n} $ on $ S^2_q (\mathbb C_q^n) $ and by $-q^{-1-1/n} $ on $ \Alt{2}{q} (\mathbb C_q^n)$.  So it suffices to check that $ \beta_{1,1} $ does the same thing.
+This follows by a direct computation.  First, it is a standard fact that $  \beta_{\mathbb C_q^n, \mathbb C_q^n} $ acts by $ q^{1-1/n} $ on $ S^2_q (\mathbb C_q^n) $ and by $-q^{-1-1/n} $ on $ \Alt{2}{q} (\mathbb C_q^n)$. (To see this, we use the fact that the eigenvalue of the square of the braiding on the $Y$ summand of $X \otimes X$ is $\theta(Y)\theta(X)^{-2}$, where $\theta(V_\lambda) = q^{\langle\lambda,\lambda+2\rho\rangle}$ is the twist factor.) So it suffices to check that $ \beta_{1,1} $ does the same thing.
 
 Now we claim that $ T''_{1,-1} $ acts by 1 on $ S^2_q(\bC_q^n) $ and acts by $ -q^{-2} $ on $ \Alt{2}{q}(\bC_q^n) $. This is because we have the following action of $U_q(\gl_2)$
 $$\xymatrix{
